<resources>
    <string name="app_name" translatable="false">Github User App</string>
    <string name="description_usergithub">Name: %1$s\n\nUsername\t: %2$s\n\nCompany\t: %3$s\n\nLocation\t: %4$s\n\nRepository\t: %5$s</string>
    <string name="profile">PROFILE</string>
    <string name="item_name">Name User</string>
    <string name="item_username" translatable="false">Username\t: %1$s</string>
    <string name="item_company">Company\t: %1$s</string>
    <string name="item_location">Location\t: %1$s</string>
    <string name="button_follower">Follower %1$s</string>
    <string name="button_following">Following %1$s</string>
    <string name="key_open_all_favorite">open my favorite</string>
    <string name="nolist_default">TIDAK ADA LIST YANG BISA DITAMPILKAN</string>
    <string name="nolist_favorite">ANDA TIDAK MEMILIKI USER FAVORITE  CARI USERNYA DAN KLIK GAMBAR HATI UNTUK MENAMBAHKAN FAVORITE USER</string>
    <string name="note">* Ketik \' %1$s \' untuk melihat daftar pengguna favorite anda</string>
    <string name="show_list_favorite">Show list favorite</string>
    <string name="setting">Setting</string>
    <string name="hidupkan_alarm">Hidupkan alarm</string>


</resources>
