<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:paddingHorizontal="5dp"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sv_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:focusable="false"
        app:iconifiedByDefault="false"
        app:queryHint="Find user in here" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sv_users"
        android:layout_marginBottom="30dp"
        android:text="@string/note"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_identity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_note"
        android:text="@string/show_list_favorite"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_identity"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_nolist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_note"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/nolist_favorite"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/sv_users"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:theme="@style/AppTheme.loading"
        android:visibility="gone" />

</RelativeLayout>